<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blogspot.mosaicogeek.skintigth.nerator.MainActivity">

    <!--Layout para el EditText para poner la cantidad de caracteres-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextLayout_Numero_Caracteres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--EditText para agregar caracteres especiales-->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Text_Numero_Caracteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_caracteres"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <!--Boton de info para el numero de caracteres-->
    <ImageView
        android:id="@+id/Image_Info_Button_Numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:layout_alignRight="@id/TextLayout_Numero_Caracteres"
        android:layout_alignEnd="@id/TextLayout_Numero_Caracteres"
        android:clickable="true"
        android:onClick="DialogoSoloNumeros"
        android:contentDescription="@string/info_cantidad"/>

    <!--Layout para el EditText para agregar caracteres especiales-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextLayout_Caracteres_Especiales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextLayout_Numero_Caracteres">

        <!--EditText para agregar caracteres especiales-->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/Text_Caracteres_Escpeciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caracteres_especiales"/>

    </android.support.design.widget.TextInputLayout>

    <!--Boton de info para los caracteres especiales-->
    <ImageView
        android:id="@+id/Image_Info_Button_Especiales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:layout_alignRight="@id/TextLayout_Caracteres_Especiales"
        android:layout_alignEnd="@id/TextLayout_Caracteres_Especiales"
        android:layout_below="@id/TextLayout_Numero_Caracteres"
        android:clickable="true"
        android:onClick="DialogoCualquierCaracter"
        android:contentDescription="@string/info_especiales"/>

    <!--Boton para generar la cadena aleatoria-->
    <Button
        android:id="@+id/Boton_Generar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_generar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TextLayout_Caracteres_Especiales"
        android:onClick="GenerarNombre"/>

    <!--TextView para mostrar la cadena aleatoria-->
    <TextView
        android:id="@+id/TextView_Texto_Generado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Boton_Generar"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_nombres"
        android:textSize="20sp"
        android:textAlignment="center"
        android:lineSpacingExtra="5dp"
        android:isScrollContainer="true"
        android:focusable="true"
        />

</RelativeLayout>
